Sun May  5 20:31:16 2002  Tim Janik  <timj@gtk.org>

	* bsewaveosc.[hc]: move this into BSE as it's an fundamental
	component and introduces procedures.

Sun Apr 21 21:18:21 2002  Tim Janik  <timj@gtk.org>

	* bseadder.[hc]: implement input channels as jstreams.

	* bsemixer.[hc]: slight cleanups.

Tue Apr 16 08:24:53 2002  Tim Janik  <timj@gtk.org>

	* bsesnooper.[hc]: remove this module from plugins.

	* *.c: category fixes.

Tue Apr  9 03:03:53 2002  Tim Janik  <timj@gtk.org>

	* implemented BseFreeVerb module, a wrapper around the public domain
	FreeVerb code by Jeremy "Jezar" Wakefield.

	* freeverb/comb.hpp, comb.cpp:
	* freeverb/denormals.h, tuning.h:
	* freeverb/revmodel.hpp, revmodel.cpp:
	* freeverb/allpass.hpp, freeverb/allpass.cpp:
	Freeverb - SOURCE CODE in the public domain, written by Jezar
	at Dreampoint - http://www.dreampoint.co.uk.

	* freeverb/bsefreeverb.[hc]:
	* freeverb/bsefreeverbcpp.h freeverb/bsefreeverbcpp.cpp:
	BseFreeVerb module implementation and C++ wrapper code.

Mon Apr  8 22:19:42 2002  Tim Janik  <timj@gtk.org>

	* davorgan.[hc]: ported DavOrgan to the engine, so we have our
	organ back.

Fri Apr  5 09:15:18 2002  Tim Janik  <timj@gtk.org>

	* bsegenosc.[hc]: fix istream count.

Sun Mar 31 19:47:57 2002  Tim Janik  <timj@gtk.org>

	* bsewaveosc.c (bse_wave_osc_set_property): use bse_item_uncross() to
	remove the cross reference to an old wave, because we want the
	notifier to be executed.

Sat Mar 30 05:54:04 2002  Tim Janik  <timj@gtk.org>

	* bsesimpleosc.[hc]: remove this, replaced by a standard oscillator
	in BSE.

	* fldbsepattern.c: adapt this code to removal of old definitions,
	will be deprecated anyways.

	* bse_wave_osc_class_init: provide proxy marshaller for signal.

	* *.c: remove old unused includes.

Wed Mar 13 18:17:46 2002  Tim Janik  <timj@gtk.org>

	* remove "no icon" icons from modules which don't have an icon.

	* icons/noicon.c:
	* icons/noicon.xcf: remove these.
