@@ -231,6 +231,8 @@ bse_compressor_context_create (BseSource *source,
     0,                          /* n_jstreams */
     1,				/* n_ostreams */
     compressor_process,		/* process */
+    NULL,                       /* process_defer */
+    NULL,                       /* reconnect */
     (GslModuleFreeFunc) g_free,	/* free */
     GSL_COST_NORMAL,		/* cost */
   };
