@@ -613,6 +613,8 @@ bse_gen_osc_context_create   (BseSource *source,
     0,                          /* n_jstreams */
     BSE_GEN_OSC_N_OCHANNELS,	/* n_ostreams */
     gen_osc_process,		/* process */
+    NULL,                       /* process_defer */
+    NULL,                       /* reconnect */
     (GslModuleFreeFunc) g_free,	/* free */
     GSL_COST_CHEAP,		/* cost */
   };
