@@ -351,6 +351,8 @@ bse_mixer_context_create (BseSource *source,
     0,                          /* n_jstreams */
     1,				/* n_ostreams */
     mixer_process,		/* process */
+    NULL,                       /* process_defer */
+    NULL,                       /* reconnect */
     (GslModuleFreeFunc) g_free,	/* free */
     GSL_COST_CHEAP,		/* flags */
   };
