@@ -414,6 +414,8 @@ bse_simple_adsr_context_create (BseSource *source,
     0,					/* n_jstreams */
     BSE_SIMPLE_ADSR_N_OCHANNELS,	/* n_ostreams */
     simple_adsr_process,		/* process */
+    NULL,                       	/* process_defer */
+    NULL,                       	/* reconnect */
     (GslModuleFreeFunc) g_free,		/* free */
     GSL_COST_CHEAP,			/* cost */
   };
