@@ -458,6 +458,8 @@ dav_organ_context_create (BseSource *source,
     0,				/* n_jstreams */
     DAV_ORGAN_N_OCHANNELS,	/* n_ostreams */
     dav_organ_process,		/* process */
+    NULL,                       /* process_defer */
+    NULL,                       /* reconnect */
     (GslModuleFreeFunc) g_free,	/* free */
     GSL_COST_NORMAL,		/* cost */
   };
